k8s/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.taskflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-standalone
                port:
                  number: 3000
